2009-09-10  yetist  <yetist@gmail.com>

	*  pinyin.sh: 
	*  m4: 
	*  m4/python.m4: 
	*  lunar: 
	*  lunar/lunar-enum-types.c.template: 
	*  lunar/lunar-date.h: 
	*  lunar/update-calendar.sh: 
	*  lunar/lunar-main.c: 
	*  lunar/lunar-enum-types.h.template: 
	*  lunar/calendar.patch: 
	*  lunar/lunar-main.h: 
	*  lunar/lunar-calendar.c: 
	*  lunar/Makefile.am: 
	*  lunar/lunar-date.c: 
	*  lunar/lunar-calendar.h: 
	*  debian: 
	*  debian/liblunar-doc.install: 
	*  debian/control: 
	*  debian/dirs: 
	*  debian/compat: 
	*  debian/liblunar-dev.dirs: 
	*  debian/docs: 
	*  debian/copyright: 
	*  debian/liblunar-dev.install: 
	*  debian/rules: 
	*  debian/changelog.in: 
	*  debian/liblunar0.install: 
	*  AUTHORS: 
	*  ChangeLog: 
	*  docs: 
	*  docs/Makefile.am: 
	*  docs/reference: 
	*  docs/reference/lunar-overrides.txt: 
	*  docs/reference/lunar.types: 
	*  docs/reference/lunar-sections.txt: 
	*  docs/reference/lunar-docs.sgml: 
	*  docs/reference/version.xml.in: 
	*  docs/reference/Makefile.am: 
	*  docs/reference/tmpl: 
	*  docs/reference/tmpl/lunardate.sgml: 
	*  docs/reference/tmpl/lunar-unused.sgml: 
	*  docs/reference/tmpl/lunarmain.sgml: 
	*  docs/reference/tmpl/lunarcalendar.sgml: 
	*  README: 
	*  bindings: 
	*  bindings/python: 
	*  bindings/python/calendar.override: 
	*  bindings/python/lunarmodule.c: 
	*  bindings/python/Makefile.am: 
	*  bindings/python/calendar.defs: 
	*  bindings/python/lunar-demo.py: 
	*  bindings/Makefile.am: 
	*  tests: 
	*  tests/test-calendar.c: 
	*  tests/Makefile.am: 
	*  tests/test-date.c: 
	*  configure.ac: 
	*  INSTALL: 
	*  liblunar: 
	*  liblunar/pinyin.sh: 
	*  liblunar/m4: 
	*  liblunar/m4/python.m4: 
	*  liblunar/lunar: 
	*  liblunar/lunar/lunar-enum-types.c.template: 
	*  liblunar/lunar/update-calendar.sh: 
	*  liblunar/lunar/lunar-date.h: 
	*  liblunar/lunar/lunar-main.c: 
	*  liblunar/lunar/lunar-enum-types.h.template: 
	*  liblunar/lunar/calendar.patch: 
	*  liblunar/lunar/lunar-main.h: 